[gd_scene load_steps=5 format=2]

[ext_resource path="res://ui/menus/menus.gd" type="Script" id=1]
[ext_resource path="res://ui/menus/pages/menu_choose_options.tscn" type="PackedScene" id=2]
[ext_resource path="res://ui/menus/pages/menu_gameplay_options.tscn" type="PackedScene" id=3]
[ext_resource path="res://ui/menus/pages/menu_general_options.tscn" type="PackedScene" id=4]

[node name="Menus" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="MenuGeneralOptions" parent="." instance=ExtResource( 4 )]
visible = false

[node name="MenuGameplayOptions" parent="." instance=ExtResource( 3 )]
visible = false

[node name="MenuChooseOptions" parent="." instance=ExtResource( 2 )]
visible = false
